# LearnOpenGL

./: CMakeLists.txt  GLDemo.cc
glad/include/glad/: glad.h
glad/src/: glad.c
platform/: mac.cmake
sample/: one_texture.cpp
shaders/: 4.2_fragment.glsl
src/: gl_impl.h
